--- a/vagas/templates/vagas/encaminhamento.html
+++ b/vagas/templates/vagas/encaminhamento.html
@@ -18,7 +18,7 @@
         
       <h2 class="text-start text-uppercase mb-4">ENCAMINHAMENTO</h2>
       {% if request.user.is_staff %}
-      <span class="ms-auto">
+      <span class="ms-auto">yy
         <a class="btn btn-btfl bg-primary" href="{% url 'vagas:visualizar_vaga' id %}">VOLTAR</a>
       </span>
       {% endif %}
@@ -45,7 +45,7 @@
         }
         #form_cadastro_vaga button:hover{
             background-color: #329787 !important;
-            border-color: #329787
+            border-color: #329787;
             color: white !important;
         }
         #form_cadastro button, .btn-primary{
