--- a/vagas/templates/vagas/encaminhamento_online.html
+++ b/vagas/templates/vagas/encaminhamento_online.html
@@ -23,10 +23,18 @@
         <b><i class="fas fa-phone-alt me-2"></i>POR  TELEFONE</b>
         <p style="margin: 10px 30px;">                
         O candidato deverá  ligar para: <br>
-        <h1 class="titulo text-dark text-center" style="font-size: 14pt;">{{vaga.empresa.telefone}}</h1>
+        <h1 class="titulo text-dark text-center" id="telefone" style="font-size: 14pt;">{{vaga.empresa.telefone}}</h1>
         <script>
-             window.onload = function(){                    
-                document.getElementById('telefone').innerText=document.getElementById('telefone').innerText.replace(/^(\d{1})(\d{1})(\d{4})(\d{4})/, "($1$2) $3-$4")
+             window.onload = function(){   
+                let tel = document.getElementById('telefone');
+                let wpp = document.getElementById('whatsapp');
+                if(tel){
+                    document.getElementById('telefone').innerText=document.getElementById('telefone').innerText.replace(/^(\d{1})(\d{1})(\d{4})(\d{4})/, "$1$2 $3-$4")
+                }
+                if(wpp){
+                document.getElementById('whatsapp').innerText=document.getElementById('whatsapp').innerText.replace(/^(\d{1})(\d{1})(\d{4})(\d{4})/, "$1$2 $3-$4")
+                }
+
             };
         </script>
         {% endif %}
@@ -35,12 +43,7 @@
         <b><i class="fab fa-whatsapp me-2"></i>POR WHATSAPP</b>
         <p style="margin: 10px 30px;">                
         O candidato deverá entrar em contato com o whatsapp abaixo: <br>
-        <h1 class="titulo text-dark text-center" style="font-size: 14pt;">0{{vaga.empresa.whatsapp}}</h1>
-        <script>
-             window.onload = function(){                    
-                document.getElementById('whatsapp').innerText=document.getElementById('whatsapp').innerText.replace(/^(\d{1})(\d{1})(\d{4})(\d{4})/, "($1$2) $3-$4")
-            };
-        </script>
+        <h1 class="titulo text-dark text-center" style="font-size: 14pt;">0<span id="whatsapp">{{vaga.empresa.whatsapp}}</span></h1>
         {% endif %}
         {% if vaga.empresa.contato_email %}
         <hr>
