ana pedindo para eu mandar o código

--- a/vagas/templates/base_site.html
+++ b/vagas/templates/base_site.html
@@ -10,6 +10,9 @@
 {% include 'header.html' %}
 {% endblock %}
 {% block main%}
+<div class="warnings"></div>
+
+
 <div class="row pt-4" style="margin: 0 19px;">
     <div id="div_menu" class="col border">
         <div id="myNavBar" class="w-100 justify-content-beetween"                                                                                                                                                                                                                                                                >
