--- a/vagas/templates/vagas/pesquisar_candidatos_result.html
+++ b/vagas/templates/vagas/pesquisar_candidatos_result.html
@@ -7,6 +7,7 @@
     </td>              
     <td>{{candidato.vaga.cargo}}</td>          
     <td>{{candidato.vaga}}</td>      
-    <td>{{candidato.vaga.empresa}}</td>												
+    <td>{{candidato.vaga.empresa}}</td>	
+    <td>{{candidato.vaga.dt_inclusao}}</td>			
 </tr>
 {% endfor %}
