--- a/vagas/templates/vagas/vagas_com_candidatos.html
+++ b/vagas/templates/vagas/vagas_com_candidatos.html
@@ -18,9 +18,9 @@
         var data = google.visualization.arrayToDataTable([
           ['Task', 'Hours per Day'],
           ['Balcão',     {{balcao}}],
-		  ['Balcão/Encerrado',     {{balcao2}}],
+		  {% comment %} ['Balcão/Encerrado',     {{balcao}}], {% endcomment %}
           ['Online',      {{online}}],
-		  ['Online/Encerrado',      {{online2}}],
+		  {% comment %} ['Online/Encerrado',      {{online}}], {% endcomment %}
         ]);
 
         var options = {
@@ -43,18 +43,44 @@
     <div class="col d-flex">
         <h2 class="text-start text-uppercase">{{ tipo_cadastro }} VAGAS COM CANDIDATOS</h2>   
 		<div class="ms-auto">
-			<a href="{% url 'vagas:pesquisar_candidatos' %}" class="btn btn-btfl "><i class="fas fa-search me-2"></i>Candidato</a>			
+			<a class="btn btn-primary  ms-auto" href="{% url 'vagas:painel_administrativo' %}">
+				Voltar
+			  </a>
 		</div>
     </div>
 </div>
   
 <form id="form_cadastro_vaga" method="post" class="form w-100 text-start">
 	<div class="d-flex w-100 py-4">		
-		<input name="data-inicial" type="date" class="form-control my-auto ms-auto" id="" style="width: 180px;">					
-		<input name="data-final" type="date" class="form-control my-auto ms-1"  id="" style="width: 180px;">			
-		<button class="btn btn-btfl my-auto ms-1 me-auto"><i class="fas fa-filter me-2"></i></button>
+		<span class="my-auto ms-auto">
+			<label for="month">Mês:</label>
+			<select name="mes" type="date" class="form-control my-auto ms-auto" id="" style="width: 180px;">
+			  <option selected value='1'>Janeiro</option>
+			  <option value='2'>Fevereiro</option>
+			  <option value='3'>Março</option>
+			  <option value='4'>Abril</option>
+			  <option value='5'>Maio</option>
+			  <option value='6'>Junho</option>
+			  <option value='7'>Julho</option>
+			  <option value='8'>Agosto</option>
+			  <option value='9'>Setembro</option>
+			  <option value='10'>Outubro</option>
+			  <option value='11'>Novembro</option>
+			  <option value='12'>Dezembro</option>
+			</select>
+		  </span>
+		  <span class="my-auto ms-2 me-1"> 
+			<label for="year">Ano:</label>
+			<select name="ano" type="date" class="form-control" id="" style="width: 180px;">
+			  <option selected value='2022'>2022</option>			  
+			  <option value='2023'>2023</option>			  
+			</select>
+		  </span>
+		  
+		<button class="btn btn-btfl mt-auto ms-1 me-auto"><i class="fas fa-filter me-2"></i></button>
 	</div>	
 	{% if buscar %}
+	<h2 class="text-center mt-5 pb-5">Resultado da busca ({{mes}}/{{ano}})</h2>
 	<div class="row px-2 mt-3">
 		<h3>Candidatos por vagas em aberto</h3>
 	</div>
@@ -72,7 +98,7 @@
 			<span>{{online}}</span>
         </div>
     </div>
-	<div class="row px-2 mt-3">
+	{% comment %} <div class="row px-2 mt-3">
 		<h3>Candidatos por vagas encerradas</h3>
 	</div>
 	<div class="row px-4 text-center mb-3">
@@ -84,7 +110,7 @@
             <b>Total de candidatos Online</b>
 			<span>{{online2}}</span>
         </div>
-    </div>
+    </div> {% endcomment %}
 	<div class="row">
 		<div class="col d-flex">
 			<div class="mx-auto" id="piechart" style="width: 900px; height: 500px;"></div>
