--- a/vagas/templates/vagas/pesquisar_candidatos_result.html
+++ b/vagas/templates/vagas/pesquisar_candidatos_result.html
@@ -1,5 +1,6 @@
+{% if candidatos %}
 {% for candidato in candidatos %}
-<tr style="background-color: rgba(230, 230, 230, 0.274);"></tr>						
+<tr>					
     <td>
         <a href="{% url 'vagas:visualizar_candidato' candidato.id %}">
             {{candidato.nome}}
@@ -10,3 +11,14 @@
     <td>{{candidato.vaga.empresa}}</td>												
 </tr>
 {% endfor %}
+{% else %}
+<tr class="text-danger">
+    <td>
+    Nenhum registro encontrado!
+    </td>
+    <td>-</td>
+    <td>-</td>
+    <td>-</td>
+
+<tr>
+{% endif %}
