--- a/vagas/templates/vagas/vagas_com_candidatos.html
+++ b/vagas/templates/vagas/vagas_com_candidatos.html
@@ -41,7 +41,7 @@
 {% endif %}                  
 <div class="row">    
     <div class="col d-flex">
-        <h2 class="text-start text-uppercase">{{ tipo_cadastro }} VAGAS COM CANDIDATOS</h2>   
+        <h2 class="text-start text-uppercase">{{ tipo_cadastro }} VAGAS COM CANDIDATOS{% if mes and ano%} - {{mes}}/{{ano}}{% endif %}</h2>   
 		<div class="ms-auto">
 			<a class="btn btn-primary  ms-auto" href="{% url 'vagas:painel_administrativo' %}">
 				Voltar
@@ -126,7 +126,7 @@
 					<tr>
 						
 						<th class="text-center">Qnt. Candidatos</th>						
-						<th scope="col" >Cargo</th>
+						<th scope="col">Cargo</th>
 						<th scope="col">Vagas</th>
 						<th scope="col">Experiência</th>
 						<th scope="col">Escolaridade</th>						
@@ -137,17 +137,17 @@
 					<tbody>
 					{% for vaga in vagas %}        
 					<tr style="background-color: rgba(230, 230, 230, 0.274);"></tr>
-						<th class="text-center">{{vaga|qntcandidatos}}</th>						
-						<td>{{vaga}}</td>              
-						<td scope="row">{{vaga.quantidadeVagas}}</td>          
-						<td>{{vaga.experiencia}}</td>      
-						<td>{{vaga.escolaridade}}</td>						
-						<td><a target="_blank" href="{% url 'vagas:listar_candidatos' vaga.id %}">Listar Candidatos</a></td>  
+						<th class="text-center">{{vaga.total}}</th>						
+						<td>{{vaga.informacao}}</td>              
+						<td scope="row">{{vaga.informacao.quantidadeVagas}}</td>          
+						<td>{{vaga.informacao.experiencia}}</td>      
+						<td>{{vaga.informacao.escolaridade}}</td>						
+						<td><a target="_blank" href="{% url 'vagas:listar_candidatos' vaga.informacao.id mes ano %}">Listar Candidatos</a></td>  
 					  </tr>
 					{% endfor %}
 				</tbody>
 			  </table>
-			  
+
 			  <style>
 				table{
 				  font-size:  0.9em;
