--- a/vagas/static/assets/css/style.css
+++ b/vagas/static/assets/css/style.css
@@ -47,7 +47,7 @@
 
 .loading {
     color: black;
-    width: 50px;
-    height: 50px;
+    max-width: 50px;
+    max-height: 50px;
     margin: auto;
   }
