--- a/vagas/templates/vagas/indicadores.html
+++ b/vagas/templates/vagas/indicadores.html
@@ -5,7 +5,6 @@
 
 <div class="col">
 
-
     <div class="main-card mb-3 card">
         <div id="graf_top_cargos_ofertados" style="width: 100%; height: 450px;"></div>
     </div> 
@@ -22,6 +21,13 @@
         <div id="graf_vagas_por_empresa" style="width: 100%; height: 450px;"></div>
     </div> 
 
+    <div class="main-card mb-3 card">
+      <div id="graf_vaga_cadastradas_por_mes" style="width: 100%; height: 450px;"></div>
+    </div>
+
+    <div class="main-card mb-3 card">
+      <div id="graf_relacao_online_balcao" style="width: 100%; height: 450px;"></div>
+    </div>
 </div>
 
 
@@ -29,75 +35,111 @@
     <script type="text/javascript">
       
       function drawChart() {
-        var data = google.visualization.arrayToDataTable([
+        
+        let data = google.visualization.arrayToDataTable([
           ['Cargo', 'Quantidade'],
             {% for cargo_ofertado in top_cargos_ofertados %}
                     ["{{ cargo_ofertado.nome}}",     {{ cargo_ofertado.total }}],
             {% endfor %}
         ]);
 
-        var options = {
+        let options = {
           title: '{{top_x}} cargos com mais vagas',
           pieHole: 0.4,
         };
 
-        var chart = new google.visualization.PieChart(document.getElementById('graf_top_cargos_ofertados'));
+        let chart = new google.visualization.PieChart(document.getElementById('graf_top_cargos_ofertados'));
         chart.draw(data, options);
 
         // -------------------------- //
 
-        var data = google.visualization.arrayToDataTable([
+        data = google.visualization.arrayToDataTable([
         ['Cargo', 'Quantidade'],
           {% for escolaridade in escolaridades %}
                   ["{{ escolaridade.nome}}",     {{ escolaridade.total }}],
           {% endfor %}
         ]);
 
-        var options = {
+        options = {
             title: 'Candidatos por escolaridade',
             pieHole: 0.4,
         };
 
-        var chart = new google.visualization.PieChart(document.getElementById('graf_escolaridades'));
+        chart = new google.visualization.PieChart(document.getElementById('graf_escolaridades'));
         chart.draw(data, options);
 
 
         // -------------------------- //
 
-        var data = google.visualization.arrayToDataTable([
+        data = google.visualization.arrayToDataTable([
         ['Cargo', 'Quantidade'],
           {% for candidato_por_mes in candidatos_por_mes %}
                   ["{{ candidato_por_mes.nome|date:"M Y"}}",     {{ candidato_por_mes.total }}],
           {% endfor %}
         ]);
 
-        var options = {
-            title: 'Candidatos por mês',
+        options = {
+            title: 'Cargos ofertados por mês',
         };
 
-        var chart = new google.visualization.ColumnChart(document.getElementById('graf_candidato_por_mes'));
+        chart = new google.visualization.ColumnChart(document.getElementById('graf_candidato_por_mes'));
         chart.draw(data, options);
+
+         // -------------------------- //
+
+         data = google.visualization.arrayToDataTable([
+         ['Mês', 'Quantidade'],
+           {% for vaga_cadastradas_por_mes in vagas_cadastradas_por_mes %}
+                   ["{{ vaga_cadastradas_por_mes.nome|date:"M Y"}}",     {{ vaga_cadastradas_por_mes.total }}],
+           {% endfor %}
+         ]);
+ 
+         options = {
+             title: 'Candidatos por mês',
+         };
+ 
+         chart = new google.visualization.ColumnChart(document.getElementById('graf_vaga_cadastradas_por_mes'));
+         chart.draw(data, options);
 
         // -------------------------- //
 
-        var data = google.visualization.arrayToDataTable([
+        data = google.visualization.arrayToDataTable([
         ['Empresa', 'Quantidade'],
           {% for vaga_por_empresa in vagas_por_empresa %}
                   ["{{ vaga_por_empresa.nome}}",     {{ vaga_por_empresa.total }}],
           {% endfor %}
         ]);
 
-        var options = {
+        options = {
             title: '{{top_x}} empresas com maior número de oferta de vagas',
             pieHole: 0.4,
         };
 
-        var chart = new google.visualization.PieChart(document.getElementById('graf_vagas_por_empresa'));
+        chart = new google.visualization.PieChart(document.getElementById('graf_relacao_online_balcao'));
         chart.draw(data, options);
-    }
-
 
     // -------------------------- //
+
+    data = new google.visualization.DataTable();
+    data.addColumn('string', 'Mês');
+    data.addColumn('number', 'Candidatos Online');
+    data.addColumn('number', 'Candidatos presencialmente');
+
+    data.addRows([
+      {% for relacao in relacao_online_balcao %}
+              ["{{ relacao.nome|date:"M Y"}}", {{ relacao.online }}, {{relacao.balcao}}],
+      {% endfor %}
+    ]);
+
+    options = {
+        title: 'Relação de vagas onlines e presencialmente',
+    };
+
+    chart = new google.visualization.ColumnChart(document.getElementById('graf_vagas_por_empresa'));
+    chart.draw(data, options);
+
+    }
+
 
       google.charts.load("current", {packages:["corechart"]});
       google.charts.setOnLoadCallback(drawChart);
