--- a/vagas/templates/vagas/painel_administrativo.html
+++ b/vagas/templates/vagas/painel_administrativo.html
@@ -21,6 +21,7 @@
   <a class="btn btn-primary" href="{% url 'vagas:painel_administrativo_excluir_cpf' %}"><i class="fas fa-trash me-2"></i><span class="mobile_hidden">Excluir CPF</span></a>  
   <a class="btn btn-primary" href="{% url 'vagas:indicadores'%}"><i class="fas fa-chart-pie me-2"></i><span class="mobile_hidden">Indicadores</span></a>    
   <a class="btn btn-primary" href="{% url 'vagas:emails'%}"><i class="fas fa-envelope me-2"></i><span class="mobile_hidden">Listar emails</span></a>    
+  <a class="btn btn-primary" href="{% url 'vagas:candidatosporfuncionario'%}"><i class="fas fa-user me-2"></i><span class="mobile_hidden">Candidatos por funcionário</span></a>    
 
 </div>
 <style>
