--- a/vagas/templates/vagas/candidatos_por_funcionarios.html
+++ b/vagas/templates/vagas/candidatos_por_funcionarios.html
@@ -40,7 +40,7 @@
 {% endif %}                  
 <div class="row">    
     <div class="col d-flex">
-        <h2 class="text-start text-uppercase">CANDIDATOS POR FUNCIONARIO</h2>   
+        <h2 class="text-start text-uppercase">CANDIDATOS POR FUNCIONARIO - {% if mes and ano %} {{mes}}/{{ano}} {% else %}desde sempre {% endif %}</h2>
 		<div class="ms-auto">
 			<a href="{% url 'vagas:pesquisar_candidatos' %}" class="btn btn-btfl me-2"><i class="fas fa-search me-2"></i>Candidato</a>
 			<button class="btn btn-btfl"><i class="fas fa-filter me-2"></i>Filtrar</button>
@@ -48,7 +48,37 @@
     </div>
   </div>
  
-<form id="form_cadastro_vaga" {% if tipo_cadastro != '' %}method="post"{% endif %} class="form w-100 text-start">	
+  <form id="form_cadastro_vaga" method="post" class="form w-100 text-start">
+	{% csrf_token %} 
+	<div class="d-flex w-100 py-4">		
+		<span class="my-auto ms-auto">
+			<label for="month">Mês:</label>
+			<select name="mes" type="date" class="form-control my-auto ms-auto" id="" style="width: 180px;">
+			  <option selected value='1'>Janeiro</option>
+			  <option value='2'>Fevereiro</option>
+			  <option value='3'>Março</option>
+			  <option value='4'>Abril</option>
+			  <option value='5'>Maio</option>
+			  <option value='6'>Junho</option>
+			  <option value='7'>Julho</option>
+			  <option value='8'>Agosto</option>
+			  <option value='9'>Setembro</option>
+			  <option value='10'>Outubro</option>
+			  <option value='11'>Novembro</option>
+			  <option value='12'>Dezembro</option>
+			</select>
+		  </span>
+		  <span class="my-auto ms-2 me-1"> 
+			<label for="year">Ano:</label>
+			<select name="ano" type="date" class="form-control" id="" style="width: 180px;">
+			  <option selected value='2022'>2022</option>			  
+			  <option value='2023'>2023</option>			  
+			</select>
+		  </span>
+		  
+		<button class="btn btn-btfl mt-auto ms-1 me-auto"><i class="fas fa-filter me-2"></i></button>
+	</div>
+
 	<div class="row">
 		<div class="col d-flex">
 			<div class="mx-auto" id="piechart" style="width: 900px; height: 500px;"></div>
