--- a/vagas/templates/base_site.html
+++ b/vagas/templates/base_site.html
@@ -18,7 +18,7 @@
         <div id="myNavBar" class="w-100 justify-content-beetween"                                                                                                                                                                                                                                                                >
             <a class="btn" href="/"><i class="fas fa-home me-2"></i><span class="mobile_hidden">Página Inicial</span></a>            
             <a class="btn" href="{% url 'vagas:vagas' %}"><i class="fas fa-bullhorn me-2"></i><span class="mobile_hidden">Vagas Ofertadas</span></a>
-            <a class="btn-insta" href="#"><i class="fab fa-instagram"></i></a>
+            <a class="btn-insta" href="https://www.instagram.com/casadotrabalhadornovafriburgo/"><i class="fab fa-instagram"></i></a>
             {% if request.user.is_staff %}
             <div class="dropdown">
                 <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
