--- a/vagas/templates/vagas/manutencao.html
+++ b/vagas/templates/vagas/manutencao.html
@@ -12,12 +12,13 @@
     <title>Manutenção</title>
 </head>
 
-<body>
+<body style="background-color: whitesmoke;">
     <main>
-        <div id="conteiner">
-            <h1>Estamos em manutenção</h1>
-            <i class="fal fa-wrench"></i>
-            <span>Estamos trabalhando para melhorar a sua experiência!</span>
+        <div id="conteiner" style="display: flex; flex-direction: column; border: 1px solid rgba(155, 155, 155, 0.342); border-radius: 30px; padding: 20px 40px; background-color: white;">
+            <h1 style="text-align: center; text-transform: uppercase; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; margin-bottom: 30px;">Estamos em manutenção</h1>            
+            <img src="/static/images/casa-do-trabalhador.png" style="width: 280px; margin-left: auto; margin-right: auto;" alt="">
+            
+            <span style="text-align: center; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; margin-top: 50px;">Estamos trabalhando para melhorar a sua experiência!</span>
         </div>
     </main>
 </body>
