--- a/vagas/templates/vagas/vagas_disponiveis_old.html
+++ b/vagas/templates/vagas/vagas_disponiveis_old.html
@@ -1,4 +1,4 @@
-{% extends 'vagas/template.html' %}
+{% extends 'template.html' %}
 {% load static %}
 {% block main %}
 <!-- Post -->
@@ -69,4 +69,5 @@
         </ul>
     </footer> -->
 </article>
+
 {% endblock %}
